@@ -137,6 +137,8 @@ void shelldir_init (const char *s);
 char *get_shelldir (void);
 
 char get_csv_delim (const DATAINFO *pdinfo);
+const char *get_csv_na_string (void);
+void set_csv_na_string (const char *s);
 
 int execute_set_line (const char *line, DATAINFO *pdinfo, PRN *prn);
 
